# bitle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: ci.yml
components/bitchat_utils/: CMakeLists.txt  bitchat_time.c
components/bitchat_utils/include/: bitchat_time.h
components/noise_ref/: CMakeLists.txt
components/noise_ref/include/noise/: config.h
components/noise_ref/include/noise/protocol/: util.h
components/noise_ref/src/crypto/donna/: poly1305-donna.c
components/noise_ref/src/crypto/ed25519/: modm-donna-32bit.h
components/noise_ref/src/protocol/: dhstate.c  rand_esp32.c  util.c
docs/: OTA.md
main/: CMakeLists.txt  bitchat_ble.c  bitchat_ble.h  bitle_courier.c  bitle_courier.h  bitle_hash.c  bitle_hash.h  bitle_link.c  bitle_link.h  bitle_lora.c  bitle_lora.h  bitle_mesh.c  bitle_mesh.h  bitle_ota.c  bitle_ota.h  bitle_store.c  bitle_store.h  bitle_sync.c  bitle_sync.h  idf_component.yml  main.c  nickname_manager.c  nickname_manager.h  noise_handshake.c  noise_handshake.h  ota_owner_pubkey.h  packet_codec.c  packet_codec.h  sx1262.c  sx1262.h
tools/: courier_test.py  gen_owner_key.py  seed_manifest.py  sign_fw.py
